brsp-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: brsp
  labels:
    name: brsp
