out.yaml
---
# Source: brsp/templates/spring/dev-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: spring-dev
  labels:
    app.kubernetes.io/name: brsp
    app.kubernetes.io/component: spring
    helm.sh/chart: brsp-0.1.0
    environment: dev
    release: release-name
    heritage: Helm
    tier: backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: brsp
      app.kubernetes.io/component: spring
      environment: dev
      release: release-name
      tier: backend
  serviceName: "nginx"
  replicas: 3 # by default is 1
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app: nginx # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: nginx
        image: registry.k8s.io/nginx-slim:0.24
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "my-storage-class"
      resources:
        requests:
          storage: 1Gi
